adding ntfspkg as submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -20,3 +20,6 @@
 [submodule "RedfishPkg/Library/JsonLib/jansson"]
 	path = RedfishPkg/Library/JsonLib/jansson
 	url = https://github.com/akheron/jansson
+[submodule "NtfsPkg"]
+	path = NtfsPkg
+	url = https://github.com/wolfcod/NtfsPkg
